--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,9 +33,9 @@ jobs:
       run: |
         python manage.py test recipe.tests.test_models
 
-    - name: Deploy to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: "your-heroku-app-name"
-        heroku_email: "your-heroku-email@example.com"
+#    - name: Deploy to Heroku
+#      uses: akhileshns/heroku-deploy@v3.12.12
+#      with:
+#        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#        heroku_app_name: "your-heroku-app-name"
+#        heroku_email: "your-heroku-email@example.com"
